--- a/index.html
+++ b/index.html
@@ -5,10 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <p>this is new challange</p>
+    <!-- ------1st part--------------- -->
+   <section id="top-container" class="flexable-container">
+       <div class="half-width">
+        <h1>Welcome to</h1>
+        <h1><span class="orange-color">Jhanker Mahbub</span> world!</h1>    
+        <h3>Build Climber and Train Stopper</h3>
+        <p class="pragraph1">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+
+        <a class="btn" type="botton" href="https://www.facebook.com/profile.php?id=100029259772526"> HIRE ME</a>
     
+       </div>
+
+       <div class="half-width"><img src="images/jhankar.png" alt=""></div>
+   </section>
+
+
+   <!-- -------2nd part-------------- -->
+
+   <section id="second-container" class="flexable-container">
+        <div class="half-width" ><img src="images/jhankar2.png" alt=""></div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p class="pragraph2">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            
+            <a class="btn2" href="">DOWNLOAD RESUME</a>
+        </div>
+   </section>
+
+
+
+<!-- -----------3rd part----------- -->
+
+   <section>
+    <h1>Experences</h1>
+    <div id="last-section"   class="flexable-container">
+        <div id="Experences-box" class="full-stack-web" >
+            <h2>Full Stack Developer</h2>
+            <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="Experences-box" class="baby-stack-web" >
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+
+            </p>
+        </div>
+    </div>
+   </section>
+
+   <footer><p class="fotter-text">© Rakibul Hassan Rakib😎</p></footer>
+
+
 </body>
 </html>
